--- a/myproject/css/styles.css
+++ b/myproject/css/styles.css
@@ -136,6 +136,8 @@ img.banner{
 
     img.logo{
         margin-left: 60px;
+        height: 200px;
+        width: 200px;
     }
 
     img.banner{
